2011-09-21  Adam Klein  <adamk@chromium.org>

        Clean up CSS Counter code
        https://bugs.webkit.org/show_bug.cgi?id=68492

        Reviewed by Tony Chang.

        Added tests for setting the list style to "none"
        as well as tests for getCounterValue.

        * fast/css/counters/counter-cssText-expected.txt:
        * fast/css/counters/counter-cssText.html:
        * fast/css/counters/getCounterValue-expected.txt: Added.
        * fast/css/counters/getCounterValue.html: Added.

2011-09-21  Chang Shu  <cshu@webkit.org>

        [WK2] [Mac] Implement a more-complete MouseDown/MouseUp/MouseMoveTo functions for WebKit2 EventSender
        https://bugs.webkit.org/show_bug.cgi?id=68108

        This patch implements the event sender mouse events through WebKit2 UIProcess which is
        closer to the real simulation than a WebProcess-only approach. The patch only supports Mac
        platform as the first step so the existing code is still kept for other platforms.

        Unskip the passed tests.

        Reviewed by Darin Adler.

        * platform/mac-wk2/Skipped:
        * platform/wk2/Skipped:

2011-09-21  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/9768483> REGRESSION: Crash in RenderBlock::removeFloatingObjectsBelow()
        https://bugs.webkit.org/show_bug.cgi?id=68550

        Reviewed by Darin Adler.

        * fast/multicol/null-lastFloat-in-removeFloatingObjectsBelow-expected.txt: Added.
        * fast/multicol/null-lastFloat-in-removeFloatingObjectsBelow.html: Added.

2011-09-21  Dmitry Lomov  <dslomov@google.com>

        Fixed bug number in test expectations. 

        * platform/chromium/test_expectations.txt:

2011-09-21  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: clear resource agent resource cache upon resource agent's disable.
        https://bugs.webkit.org/show_bug.cgi?id=67995

        Reviewed by Pavel Feldman.
