@@ -1,3 +1,15 @@
+2011-09-21  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        [Chromium] Protect the Frame in V8HTMLDocument::openCallback
+        https://bugs.webkit.org/show_bug.cgi?id=68555
+
+        Reviewed by Nate Chapin.
+
+        Test: fast/dom/frame-deleted-in-document-open.html
+
+        * bindings/v8/custom/V8HTMLDocumentCustom.cpp:
+        (WebCore::V8HTMLDocument::openCallback):
+
 2011-09-21  Adam Klein  <adamk@chromium.org>
 
         Clean up CSS Counter code
