@@ -1,3 +1,13 @@
+2011-09-21  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        [Chromium] Protect the Frame in V8HTMLDocument::openCallback
+        https://bugs.webkit.org/show_bug.cgi?id=68555
+
+        Reviewed by Nate Chapin.
+
+        * fast/dom/frame-deleted-in-document-open-expected.txt: Added.
+        * fast/dom/frame-deleted-in-document-open.html: Added.
+
 2011-09-21  Adam Klein  <adamk@chromium.org>
 
         Clean up CSS Counter code
